# raspi-status

./: .gitignore  LICENSE  README.md  display.py  fetchsensors.py  fetchsensors.service  install.sh  pyproject.toml  requirements.txt  sensors.example.json  update.sh  updateoled.py  updateoled.service
.devcontainer/: Dockerfile  devcontainer.json
fetchsensors/: README.md  fetchsensors.py  fetchsensors.service  sensors.example.json
sensorprobe/: README.md  build.sh  go.mod  go.sum
sensorprobe/src/: sensorprobe.go
updateoled/: updateoled.service
